--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,32 @@
+/* COLORS
+ * ----------
+ *
+ *
+ */
+html {
+  height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
   height: 100%;
-}
-html {
-  height: 100%;
+  color: white;
 }
 main {
   height: 100%;
 }
-
+h1 {
+  margin-top: 0;
+}
+h2 {
+  color: black;
+  text-align: center;
+  font-size: 30pt;
+  padding-bottom: 2%;
+}
+h3 {
+  margin: 0;
+}
 .cd-fixed-bg {
   min-height: 100%;
   background-size: cover;
@@ -17,7 +34,6 @@ main {
   background-repeat: no-repeat;
   background-position: center center;
 }
-
 .cd-fixed-bg.cd-bg-1 {
   position: relative;
   background-image: url("images/inthegym.jpg");
@@ -31,7 +47,6 @@ main {
 .cd-fixed-bg.cd-bg-4 {
   background-image: url("images/inthegym5.jpg");
 }
-
 .cd-scrolling-bg {
    min-height: 100%;
 }
@@ -61,21 +76,11 @@ main {
   text-align: center;
   padding: 5% 0;
 }
-h1 {
-  margin-top: 0;
-}
-h2 {
-  color: black;
-  text-align: center;
-  font-size: 30pt;
-  padding-bottom: 2%;
-}
+
 a.navbar-brand {
   padding-top: 12%;
 }
-h3 {
-  margin: 0;
-}
+
 #about-activ8 {
   padding-top: 5%;
 }
@@ -103,4 +108,20 @@ h3 {
 .cd-scrolling-bg.cd-color-3 {
   background-color: #b4d7a8;
   color: #3d3536;
+}
+
+.pink {
+  background-color: pink;
+}
+
+.blue {
+  background-color: lightblue;
+}
+
+.purple {
+  background-color: thistle;
+}
+
+.o-red {
+  outline: red solid 4px;
 }
