displaying the new workout in the history

--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -26,7 +26,7 @@
         </section>
       </div>
       <div class="row row-3">
-        <section class="myHistory col-xs-12">
+        <section class="myHistory col-xs-12" ng-controller="HistoryController as history">
           <p>My History</p>
         </section>
       </div>
@@ -90,17 +90,3 @@
         <a href="#dashboard"><span class="glyphicon glyphicon-chevron-up"></span></a>
       </section>
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
