--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -57,8 +57,21 @@
       </div>
       <!-- BEGIN History -->
       <div class="row row-3">
-        <section class="myHistory col-xs-12">
+        <section class="myHistory col-xs-12" ng-controller="HistoryController as history">
           <p>My History</p>
+          <ul class="history-list">
+            <li ng-repeat="list in history.historyList ">
+              <a ng-href="#">{{list[0].date | date:'short'}}</a><br>
+              <!-- Move:{{list[0].name}}<br>
+              Reps:{{list[0].reps}}<br>
+              Rds:{{list[0].rds}}<br>
+              Weight:{{list[0].weight}}<br>
+              Move:{{list[1].name}}<br>
+              Reps:{{list[1].reps}}<br>
+              Rds:{{list[1].rds}}<br>
+              Weight:{{list[1].weight}}<br> -->
+              </li>
+          </ul>
         </section>
       </div>
       <!-- BEGIN "page-down" content -->
