--- a/css/styles.css
+++ b/css/styles.css
@@ -186,9 +186,9 @@ background: rgb(242, 84, 84);
 .purple {
   background-color: thistle;
 }
-.o-red {
+/*.o-red {
   outline: red solid 2px;
-}
+}*/
 /* --------------------------------------
  FEATURES
 -----------------------------------------*/
@@ -199,6 +199,9 @@ margin-bottom: 80px;
 }
 .feature-details h4 {
   color: #BE1D29;
+}
+.features .phone-image img {
+width: 100%;
 }
 /* --------------------------------------
  MEDIA QUERIES
