--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -26,7 +26,7 @@
         </section>
       </div>
       <div class="row row-3">
-        <section class="myHistory col-xs-12">
+        <section class="myHistory col-xs-12" ng-controller="HistoryController as history">
           <p>My History</p>
         </section>
       </div>
@@ -71,7 +71,6 @@
         <li>Squat Snatch: {{user.pr.squatsnatch}} 500lbs</li>
         <li>Hang Snatch: {{user.pr.hangsnatch}} 500lbs</li>
         <li>Hang Squat Snatch: {{user.pr.hangsquatsnatch}} 500lbs</li>
-
       </ul>
       <ul class="prList prList2 col-xs-6">
         <li>Deadlift: {{user.pr.deadlift}} 500lbs</li>
@@ -90,17 +89,4 @@
         <a href="#dashboard"><span class="glyphicon glyphicon-chevron-up"></span></a>
       </section>
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    
