--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -289,6 +289,10 @@ h4 {
 .history-list {
   list-style-type: none;
 }
+.new-moves {
+  width: 80%;
+  margin: 0 auto;
+}
 /* @media (min-width: 380px){
   .loginText {
     top: 75%;
