--- a/src/app/views/new-workout.html
+++ b/src/app/views/new-workout.html
@@ -1,5 +1,5 @@
 <!-- TODO: extract, inject nav with ng-include instead -->
-<div class="container-fluid main-body" ng-controller="MainController">
+<div class="container-fluid main-body" ng-controller="MainController as app">
   <nav class="navbar navbar-default main-nav" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -9,7 +9,7 @@
         <a class="name" href="#">
           <h1 class="appName navbar-left">Activ8</h1>
         </a>
-        <button ng-click="logOut()" class="logout navbar-right btn">Logout</button>
+        <button ng-click="app.logout()" class="logout navbar-right btn">Logout</button>
       </div>
     </div>
   </nav>
@@ -18,12 +18,16 @@
 
   <form class="new-move" ng-submit="work.addWork(work.workout)">
     <label><h4>Today's Workout</h4></label><br>
-    <p style="color: white;">{{1417906862147 | date:'short'}}</p>
     <div class="new-moves" ng-repeat="move in work.workout">
-      <input class='naming{{move.moveNumber}}' ng-model="move.name" type="text" list="moving" placeholder="Select Movement" autocomplete="on"><br>
-      <input type="text" ng-model="move.reps" placeholder="Reps"><br>
-      <input type="text" ng-model="move.rds"  placeholder="Rounds"><br>
-      <input type="text" ng-model="move.weight" placeholder="Weight"><button class="btn btn-danger glyphicon glyphicon-trash" ng-click="work.delete(move)"></button><br>
+      <input class="form-control" ng-model="move.name" type="text" list="moving" placeholder="Select Movement" autocomplete="on">
+      <input type="text" class="form-control" ng-model="move.reps" placeholder="Reps">
+      <input type="text" class="form-control" ng-model="move.rds"  placeholder="Rounds">
+      <div class="input-group">
+        <input type="text" class="form-control" ng-model="move.weight" placeholder="Weight">
+        <span class="input-group-btn">
+          <button class="btn btn-danger glyphicon glyphicon-trash" type="button" ng-click="work.delete(move)"></button>
+        </span>
+      </div><!-- /input-group -->
       <input type="text" ng-hide="true" ng-model="move.moveNumber"><br>
 
     </div>
