gulp/pr controller working in new code

--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -36,10 +36,13 @@
     </section>
     <section ng-show="app.loggedIn()" id="personalBests">
       <h3 class="records">Personal Records(PR's)</h3>
-        <ul class="prDrop">
+        <ul class="prDrop" ng-controller="prController as pr">
           <li>
-            <label for="personalRecords">Select Movement:</label><br>
-            <select type="text" id="personalRecords" placeholder="Breaking Records">
+            <label for="personalRecords" ng-click="pr.test()">Select Movement:</label><br>
+            <select type="text" id="personalRecords" placeholder="Breaking Records"
+              ng-model="selectedPr"
+              ng-change="pr.testPr()"
+            >
               <optgroup label="Clean">
                 <option value="Power Clean">Power Clean</option>
                 <option value="Squat Clean">Squat Clean</option>
@@ -89,4 +92,3 @@
         <a href="#dashboard"><span class="glyphicon glyphicon-chevron-up"></span></a>
       </section>
     </section>
-    
