--- a/src/app/views/new-workout.html
+++ b/src/app/views/new-workout.html
@@ -1,5 +1,5 @@
 <!-- TODO: extract, inject nav with ng-include instead -->
-<div class="container-fluid main-body" ng-controller="MainController as app">
+<!-- <div class="container-fluid main-body" ng-controller="MainController as app">
   <nav class="navbar navbar-default main-nav" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -12,7 +12,7 @@
         <button ng-click="app.logout()" class="logout navbar-right btn">Logout</button>
       </div>
     </div>
-  </nav>
+  </nav> -->
 <!-- /TODO -->
 <section class="main" ng-controller="WorkoutController as work">
 
