--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -1,6 +1,6 @@
   <!-- TODO: Separate login code from dashboard code. Give them their own controllers. -->
-  <div class="container-fluid main-body" ng-controller="MainController as app">
-    <!-- Navbar A -->
+  <!-- <div class="container-fluid main-body" ng-controller="MainController as app">
+    Navbar A
     <nav ng-hide="app.loggedIn()" class="navbar navbar-default main-nav" role="navigation">
       <span>You are logged out. ln#5</span>
       <div class="navbar-header">
@@ -11,7 +11,7 @@
           <h1 class="appName">Activ8</h1>
         </a>
       </div>
-    </nav>
+    </nav> -->
 
     <section ng-hide="app.loggedIn()" class="kettleBox" >
       <span>You are logged out. ln#17</span>
@@ -46,7 +46,7 @@
           <p class="fbName">{{app.user.fullName|| displayName}}</p>
         </section><!-- / section.avatar -->
         <section class="plus-workout col-xs-7">
-          <a role="button" class="btn btn-success work-btn glyphicon glyphicon-plus" href="http://localhost:3000/index.html#/new-workout">New Workout</a>
+          <a role="button" class="btn btn-success work-btn glyphicon glyphicon-plus" href="http://localhost:3000/index.html#/new-workout">NewWorkout</a>
         </section><!-- / section.plus-workout -->
       </div>
       <!-- BEGIN Days Active -->
