--- a/src/app/views/personal-records.html
+++ b/src/app/views/personal-records.html
@@ -1,5 +1,19 @@
-<div class="container-fluid main-body" ng-controller="prController">
-  <section ng-show="app.loggedIn()" id="personalBests">
+<div class="container-fluid main-body" ng-controller="MainController">
+  <nav class="navbar navbar-default main-nav" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+          <img class="ree" src="./assets/images/reebokxfit.png" alt="">
+        </a>
+        <a class="name" href="#">
+          <h1 class="appName navbar-left">Activ8</h1>
+        </a>
+        <button ng-click="logOut()" class="logout navbar-right btn">Logout</button>
+      </div>
+    </div>
+  </nav>
+
+  <section id="personalBests" ng-controller="prController">
     <h3 class="records">Personal Records(PR's)</h3>
     <ul class="prDrop">
       <li>
