pr button moved

--- a/src/app/views/personal-records.html
+++ b/src/app/views/personal-records.html
@@ -13,7 +13,7 @@
     </div>
   </nav>
 
-  <section id="personalBests" ng-controller="prController">
+  <section id="personalBests" ng-controller="prController as pr">
     <h3 class="records">Personal Records(PR's)</h3>
     <ul class="prDrop">
       <li>
