--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -44,10 +44,10 @@
         <section class="avatar col-xs-5">
           <img ng-src="{{app.user.avatarUrl}}" class="img-responsive img-rounded fb-avatar" alt="" width="100px" height="100px">
           <p class="fbName">{{app.user.fullName|| displayName}}</p>
-          <a role="button" class="btn btn-success work-btn" href="http://localhost:3000/index.html#/personal-records">Personal Records</a>
         </section><!-- / section.avatar -->
         <section class="plus-workout col-xs-7">
-          <a role="button" class="btn btn-success work-btn glyphicon glyphicon-plus" href="http://localhost:3000/index.html#/new-workout">New Workout</a>
+          <a role="button" class="btn btn-success work-btn glyphicon glyphicon-plus" href="#/new-workout">New Workout</a>
+          <a role="button" class="btn btn-success work-btn" href="#/personal-records">Personal Records</a>
         </section><!-- / section.plus-workout -->
       </div>
       <!-- BEGIN Days Active -->
