--- a/src/app/views/personal-records.html
+++ b/src/app/views/personal-records.html
@@ -15,7 +15,10 @@
 
   <section id="personalBests" ng-controller="prController as pr">
     <h3 class="records">Personal Records(PR's)</h3>
-    <ul class="prDrop">
+    <button ng-click="pr.test()"> TEST CLICK ME LOL </button>
+
+
+    <!-- <ul class="prDrop">
       <li>
         <label for="personalRecords" ng-click="pr.test()">Select Movement:</label><br>
         <select type="text" id="personalRecords" placeholder="Breaking Records"
@@ -40,9 +43,6 @@
           </optgroup>
         </select>
       </li>
-    </ul>
-    <section class="page-up col-xs-12">
-      <a href="#dashboard"><span class="glyphicon glyphicon-chevron-up"></span></a>
-    </section>
+    </ul> -->
   </section><!-- / section#personalBests -->
 </div>
