displaying PRs in view

--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -1,6 +1,6 @@
 
  <!-- TODO: Separate login code from dashboard code. Give them their own controllers. -->
-  <div class="container-fluid main-body" ng-controller="MainController as app">
+  <div class="container-fluid main-body">
     <!-- Navbar A -->
     <nav ng-hide="app.loggedIn()" class="navbar navbar-default main-nav" role="navigation">
       <span>You are logged out. ln#5</span>
