--- a/src/app/views/new-workout.html
+++ b/src/app/views/new-workout.html
@@ -1,6 +1,6 @@
 
 <!-- TODO: extract, inject nav with ng-include instead -->
-<div class="container-fluid main-body" ng-controller="MainController">
+<div class="container-fluid main-body">
   <nav class="navbar navbar-default main-nav" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
