--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -161,6 +161,7 @@
     </section><!-- / section.avatar -->
     <section class="plus-workout col-xs-7">
       <a role="button" class="btn btn-success work-btn glyphicon glyphicon-plus" href="#/new-workout">NewWorkout</a>
+      <a role="button" class="btn btn-success work-btn" href="#/personal-records">Personal Records</a>
     </section><!-- / section.plus-workout -->
   </div>
   <!-- BEGIN Days Active -->
