--- a/src/app/views/personal-records.html
+++ b/src/app/views/personal-records.html
@@ -8,15 +8,13 @@
         <a class="name" href="#">
           <h1 class="appName navbar-left">Activ8</h1>
         </a>
-        <button ng-click="logOut()" class="logout navbar-right btn">Logout</button>
+        <button ng-click="app.logout()" class="logout navbar-right btn" href="#">Logout</button>
       </div>
     </div>
   </nav>
 
   <section id="personalBests">
-    <h3 class="records">Personal Records(PR's)</h3>
-    <button ng-click="pr.test()"> TEST CLICK ME LOL </button>
-
+    <h3 class="records">Personal Records (PR's)</h3>
     <ul class="pr-list">
         <li ng-repeat="(name, best) in app.user.pr">
           <a ng-href="#">{{name}}: {{best.weight}}</a><br>
