--- a/src/app/views/login.html
+++ b/src/app/views/login.html
@@ -1,4 +1,5 @@
-<section ng-hide="app.loggedIn()" class="kettleBox" >
+<!-- Login Screen -->
+<section  class="kettleBox" >
   <figure ng-click="app.login()">
     <a><img src="./assets/images/reebokxfit.png" alt="" class="img-responsive kettle"></a><br>
     <figcaption class="loginText">
@@ -7,3 +8,4 @@
   </figure>
   <footer><em>Privacy Policy</em></footer>
 </section>
+<!--End Login -->
