--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -96,12 +96,12 @@ h4 {
   margin-top: 5%;
 }
 .kettle {
-  width: 40%;
+  width: 60%;
   /* margin: 50% auto 0 auto; */
   position: absolute;
   top: 30%;
-  left: 30%;
-  right: 30%;
+  left: 20%;
+  right: 20%;
 }
 .loginText {
   position: absolute;
@@ -297,6 +297,26 @@ h2 {
 .new-moves {
   width: 80%;
   margin: 0 auto;
+
+html {
+  overflow-y:hidden;
+  }
+.page {
+    bottom:0; 
+    position:absolute;
+    text-align:center;
+    top:0;
+    width:100%;
+  }
+.ng-leave        {
+  -webkit-animation:slideOutLeft 0.5s both ease-in;
+  -moz-animation:slideOutLeft 0.5s both ease-in;
+  animation:slideOutLeft 0.5s both ease-in;
+}
+.ng-enter 		{
+  -webkit-animation:slideInRight 0.5s both ease-in;
+  -moz-animation:slideInRight 0.5s both ease-in;
+  animation:slideInRight 0.5s both ease-in;
 }
 /* @media (min-width: 380px){
 .loginText {
