--- a/src/app/views/login.html
+++ b/src/app/views/login.html
@@ -1,7 +1,7 @@
 <!-- Login Screen -->
 <section  class="kettleBox" >
   <figure ng-click="app.login()">
-    <a><img src="./assets/images/reebokxfit.png" alt="" class="img-responsive kettle"></a><br>
+    <a><img src="./assets/images/fbkettle.png" alt="" class="img-responsive kettle"></a><br>
     <figcaption class="loginText">
       <a href="#"><h3>Login</h3></a>
     </figcaption>
