--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -297,26 +297,70 @@ h2 {
 .new-moves {
   width: 80%;
   margin: 0 auto;
-
-html {
-  overflow-y:hidden;
-  }
-.page {
-    bottom:0; 
-    position:absolute;
-    text-align:center;
-    top:0;
-    width:100%;
-  }
-.ng-leave        {
-  -webkit-animation:slideOutLeft 0.5s both ease-in;
-  -moz-animation:slideOutLeft 0.5s both ease-in;
-  animation:slideOutLeft 0.5s both ease-in;
 }
-.ng-enter 		{
-  -webkit-animation:slideInRight 0.5s both ease-in;
-  -moz-animation:slideInRight 0.5s both ease-in;
-  animation:slideInRight 0.5s both ease-in;
+.page        {
+  bottom:0;
+  padding-top:200px;
+  position:absolute;
+  text-align:center;
+  top:0;
+  width:100%;
+}
+
+.page h1 	{ font-size:60px; }
+.page a     { margin-top:50px; }
+
+/* PAGES (specific colors for each page)
+============================================================================= */
+.page-home 		{ background:#00D0BC; color:#00907c; }
+.page-about 	{ background:#E59400; color:#a55400; }
+.page-contact 	{ background:#ffa6bb; color:#9e0000; }
+/* ANIMATIONS
+============================================================================= */
+
+/* leaving animations ----------------------------------------- */
+/* rotate and fall */
+@keyframes rotateFall {
+  0% 		{ transform: rotateZ(0deg); }
+  20% 	{ transform: rotateZ(10deg); animation-timing-function: ease-out; }
+  40% 	{ transform: rotateZ(17deg); }
+  60% 	{ transform: rotateZ(16deg); }
+  100% 	{ transform: translateY(100%) rotateZ(17deg); }
+}
+
+/* slide in from the bottom */
+@keyframes slideOutLeft {
+  to 		{ transform: translateX(-100%); }
+}
+
+/* rotate out newspaper */
+@keyframes rotateOutNewspaper {
+  to 		{ transform: translateZ(-3000px) rotateZ(360deg); opacity: 0; }
+}
+
+/* entering animations --------------------------------------- */
+/* scale up */
+@keyframes scaleUp {
+  from 	{ opacity: 0.3; -webkit-transform: scale(0.8); }
+}
+
+/* slide in from the right */
+@keyframes slideInRight {
+  from 	{ transform:translateX(100%); }
+  to 		{ transform: translateX(0); }
+}
+
+/* slide in from the bottom */
+@keyframes slideInUp {
+  from 	{ transform:translateY(100%); }
+  to 		{ transform: translateY(0); }
+}
+.ng-enter 			{ animation: scaleUp 0.5s both ease-in; z-index: 8888; }
+.ng-leave 			{ animation: slideOutLeft 0.5s both ease-in; z-index: 9999; }
+.go-to-history {
+  position: absolute;
+  top: 9%;
+  z-index: 200;
 }
 /* @media (min-width: 380px){
 .loginText {
