--- a/src/app/views/new-workout.html
+++ b/src/app/views/new-workout.html
@@ -1,6 +1,8 @@
-
+<section class="go-to-history col-xs-12">
+  <a href="#history" class="btn btn-warning btn-sm">My History</a>
+</section>
 <section class="main">
-  <form class="new-move" ng-submit="work.addWork(work.workout)">
+  <form class="new-move col-xs-12" ng-submit="work.addWork(work.workout)">
     <label><h4>Today's Workout</h4></label><br>
     <div class="new-moves" ng-repeat="move in work.workout">
       <input class="form-control" ng-model="move.name" type="text" list="moving" placeholder="Select Movement" autocomplete="on">
@@ -18,6 +20,8 @@
     <div>
       <input type="Button" class="btn btn-success" value="(+)Add Movement" ng-click="work.addMove()"><br>
       <input type="submit" class="btn btn-primary" value="Save Workout">
+
+
     </div>
   </form>
 
@@ -25,5 +29,7 @@
     <option data-ng-repeat="moves in work.moveList.movements" value="{{moves.name}}"></option>
   </datalist>
   <br>
-</section> <!-- / .main -->
+
+</section>
+<!-- / .main -->
 </div><!-- /.main-body -->
