--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -216,11 +216,6 @@ h2 {
 .plus-workout button a {
   color: white;
 }
-#personalBests {
-  color: white;
-  background-color: rgba(0,0,0,0.5);
-  height: 100vh;
-}
 .prList {
   list-style-type: none;
   padding-right: 10px;
@@ -287,13 +282,36 @@ h2 {
 .history-list {
   list-style-type: none;
 }
-<<<<<<< HEAD
-=======
+
 .new-moves {
   width: 80%;
   margin: 0 auto;
 }
->>>>>>> upstream/development
+
+//
+// PR page CSS
+//
+.pr-list {
+  list-style: none;
+  font-size: 14pt;
+  line-height: 4ex;
+}
+
+#personalBests {
+  color: white;
+  background-color: rgba(0,0,0,0.5);
+  padding: .5rem;
+  margin-top: 20%;
+  overflow: auto;
+  height: 100vh;
+  width: 100%;
+  -webkit-overflow-scrolling: touch;
+}
+#personalBests::-webkit-scrollbar {
+  display: none;
+}
+
+
 /* @media (min-width: 380px){
 .loginText {
 top: 75%;
