--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -200,9 +200,8 @@ h2 {
 .row-2, .row-3 {
   color: white;
   min-height: 20%;
-  background-color: rgba(200,0,0,0.5);
-  margin: 8% auto 0 auto;
-  width: 90%;
+  margin: 0;
+  width: 100%;
 }
 .avatar {
   padding: 0;
@@ -253,7 +252,7 @@ h2 {
 .fbName {
   color: white;
   font-weight: bold;
-  text-align: left;
+  text-align: center;
   margin: 0;
 }
 .page-up {
@@ -310,68 +309,26 @@ h2 {
   width: 80%;
   margin: 0 auto;
 }
-.page        {
-  bottom:0;
-  padding-top:200px;
-  position:absolute;
-  text-align:center;
-  top:0;
-  width:100%;
-}
-
-.page h1 	{ font-size:60px; }
-.page a     { margin-top:50px; }
-
-/* PAGES (specific colors for each page)
-============================================================================= */
-.page-home 		{ background:#00D0BC; color:#00907c; }
-
-/* ANIMATIONS
-============================================================================= */
-
-/* leaving animations ----------------------------------------- */
-/* rotate and fall */
-@keyframes rotateFall {
-  0% 		{ transform: rotateZ(0deg); }
-  20% 	{ transform: rotateZ(10deg); animation-timing-function: ease-out; }
-  40% 	{ transform: rotateZ(17deg); }
-  60% 	{ transform: rotateZ(16deg); }
-  100% 	{ transform: translateY(100%) rotateZ(17deg); }
-}
-
-/* slide in from the bottom */
-@keyframes slideOutLeft {
-  to 		{ transform: translateX(-100%); }
-}
-
-/* rotate out newspaper */
-@keyframes rotateOutNewspaper {
-  to 		{ transform: translateZ(-3000px) rotateZ(360deg); opacity: 0; }
-}
-
-/* entering animations --------------------------------------- */
-/* scale up */
-@keyframes scaleUp {
-  from 	{ opacity: 0.3; -webkit-transform: scale(0.8); }
-}
-
-/* slide in from the right */
-@keyframes slideInRight {
-  from 	{ transform:translateX(100%); }
-  to 		{ transform: translateX(0); }
-}
-
-/* slide in from the bottom */
-@keyframes slideInUp {
-  from 	{ transform:translateY(100%); }
-  to 		{ transform: translateY(0); }
-}
-.ng-enter 			{ animation: scaleUp 0.5s both ease-in; z-index: 8888; }
-.ng-leave 			{ animation: slideOutLeft 0.5s both ease-in; z-index: 9999; }
 .go-to-history {
   position: absolute;
   top: 9%;
   z-index: 200;
+}
+.fb-avatar {
+  margin: 0 auto;
+  width: 55%;
+  padding-top: 5%;
+}
+.work-btn, .history-btn, .pr-btn {
+  background-color: rgba(255, 255, 255, 0.3);
+  height: 18.2vh;
+  color: white;
+  text-align: center;
+  padding-top: 10%;
+  font-size: 15pt;
+}
+.dash-buttons {
+  height: 50vh;;
 }
 /* @media (min-width: 380px){
 .loginText {
