--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -3,30 +3,22 @@
   <!-- Begin new-dash -->
   <section class="new-dash">
       <div class="row row-1">
-      <section class="avatar col-xs-5">
-        <img ng-src="{{app.user.avatarUrl}}" class="img-responsive img-rounded fb-avatar" alt="" width="100px" height="100px">
+      <section class="avatar col-xs-12">
+        <img ng-src="{{app.user.avatarUrl}}" class="img-responsive img-rounded fb-avatar" alt="" >
         <p class="fbName">{{app.user.fullName|| displayName}}</p>
       </section><!-- / section.avatar -->
-      <section class="plus-workout col-xs-7">
-        <a role="button" class="btn btn-success work-btn glyphicon glyphicon-plus" href="#/new-workout">NewWorkout</a>
-      </section><!-- / section.plus-workout -->
     </div>
-    <!-- BEGIN Days Active -->
-    <div class="row row-2">
-      <section class="daysActive col-xs-12">
-        <h3>Days Active Chart</h3>
-      </section>
-    </div>
-    <!-- BEGIN History -->
-    <div class="row row-3">
-      <section class="myHistory col-xs-12" ng-controller="HistoryController as history">
-        <p>My History</p>
-         <ul class="history-list">
-          <li ng-repeat="list in history.historyList ">
-            <a ng-href="#">{{list[0].name}}</a><br>
-          </li>
-        </ul>
-      </section>
-    </div>
+    <!-- BEGIN Buttons -->
   </section><!-- End new-dash -->
+  <section class="dash-buttons">
+    <div class="row row-2 buttons">
+      <a role="button" class="work-btn col-xs-12" href="#new-workout"><span class="glyphicon glyphicon-plus"></span> New Workout</a>
+    </div>
+    <div class="row row-2">
+      <a role="button" class="history-btn col-xs-12" href="#history">My History</a>
+    </div>
+    <div class="row row-2">
+      <a role="button" class="pr-btn col-xs-12" href="#pr">My PR's</a>
+    </div>
+  </section>
 </section><!-- / section#dashboard -->
