full width buttons on dash

--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -12,7 +12,7 @@
   </section><!-- End new-dash -->
   <section class="dash-buttons">
     <div class="row row-2 buttons">
-      <a role="button" class="work-btn col-xs-12" href="#new-workout"><span class="glyphicon glyphicon-plus"></span> New Workout</a>
+      <a role="button" class="work-btn col-xs-12" href="#new-workout"><span class="glyphicon glyphicon-plus col-xs-2"></span><p class="col-xs-10 new-btn"> New Workout</p></a>
     </div>
     <div class="row row-2">
       <a role="button" class="history-btn col-xs-12" href="#history">My History</a>
