--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -320,15 +320,24 @@ h2 {
   padding-top: 5%;
 }
 .work-btn, .history-btn, .pr-btn {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.4);
   height: 18.2vh;
   color: white;
   text-align: center;
   padding-top: 10%;
   font-size: 15pt;
 }
+.work-btn, .history-btn {
+  border-bottom: .3ex solid rgba(0,0,0,0.3);
+}
 .dash-buttons {
   height: 50vh;;
+}
+.glyphicon {
+  padding: 0;
+}
+.new-btn {
+  margin-left: -6%;
 }
 /* @media (min-width: 380px){
 .loginText {
