added glyphs to dash buttons

--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -15,10 +15,10 @@
       <a role="button" class="work-btn col-xs-12" href="#new-workout"><span class="glyphicon glyphicon-plus col-xs-2"></span><p class="col-xs-10 new-btn"> New Workout</p></a>
     </div>
     <div class="row row-2">
-      <a role="button" class="history-btn col-xs-12" href="#history">My History</a>
+      <a role="button" class="history-btn col-xs-12" href="#history"><span class="glyphicon glyphicon-calendar col-xs-2"></span> <p class="col-xs-10 new-btn">My History</p></a>
     </div>
     <div class="row row-2">
-      <a role="button" class="pr-btn col-xs-12" href="#pr">My PR's</a>
+      <a role="button" class="pr-btn col-xs-12" href="#pr"> <span class="glyphicon glyphicon-fire col-xs-2"></span><p class="new-btn col-xs-10">My PR's</p></a>
     </div>
   </section>
 </section><!-- / section#dashboard -->
