--- a/src/app/views/personal-records.html
+++ b/src/app/views/personal-records.html
@@ -17,36 +17,9 @@
     <h3 class="records">Personal Records</h3>
     <ul class="pr-list">
         <li ng-repeat="(name, best) in app.user.pr">
-            {{name}}: {{best.weight}}<br>
+          {{name}}:
+          <div contenteditable name="prs" ng-model="best.weight" strip-br="true">{{best.weight}}</br></div>
         </li>
     </ul>
-
-
-    <!-- <ul class="prDrop">
-      <li>
-        <label for="personalRecords" ng-click="pr.test()">Select Movement:</label><br>
-        <select type="text" id="personalRecords" placeholder="Breaking Records"
-          ng-model="selectedPr"
-          ng-change="pr.testPr()"
-        >
-          <optgroup label="Clean">
-            <option value="Power Clean">Power Clean</option>
-            <option value="Squat Clean">Squat Clean</option>
-            <option value="Hang Power Clean">Hang Power Clean</option>
-            <option value="Hang Squat Clean">Hang Squat Clean</option>
-            <option value="Clean & Jerk">Clean & Jerk</option>
-          </optgroup>
-          <optgroup label="Jerk">
-            <option value="Jerk">Jerk</option>
-            <option value="Split Jerk">Split Jerk</option>
-            <option value="Push Jerk">Push Jerk</option>
-          </optgroup>
-          <optgroup label="Snatch">
-            <option value="Power Snatch">Power Snatch</option>
-            <option value="Squat Snatch">Squat Snatch</option>
-          </optgroup>
-        </select>
-      </li>
-    </ul> -->
-  </section><!-- / section#personalBests -->
+  </section>
 </div>
