beginning polish of new workout

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -269,7 +269,7 @@ h2 {
   right: 2%;
 }
 .new-move, {
-  margin-top: 30%;
+  margin-top: 10ex;
   overflow: auto;
   height: auto;
   padding: .5rem;
