--- a/src/app/views/new-workout.html
+++ b/src/app/views/new-workout.html
@@ -11,7 +11,7 @@
       <div class="input-group">
         <input type="text" class="form-control" ng-model="move.weight" placeholder="Weight">
         <span class="input-group-btn">
-          <button class="btn btn-danger glyphicon glyphicon-trash" type="button" ng-click="work.delete(move)"></button>
+          <button class="glyphicon glyphicon-trash" type="button" ng-click="work.delete(move)"></button>
         </span>
       </div><!-- /input-group -->
       <input type="text" ng-hide="true" ng-model="move.moveNumber"><br>
