--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -307,7 +307,7 @@ h2 {
 }
 .go-to-history {
   position: absolute;
-  top: 9%;
+  top: 2ex;
   z-index: 200;
 }
 .fb-avatar {
@@ -324,6 +324,15 @@ h2 {
 }
 .work-btn, .history-btn {
   border-bottom: .3ex solid rgba(0,0,0,0.3);
+}
+.add-move-btn, .save-btn {
+  background-color: rgba(255,255,255,0.8);
+  height: 6ex;
+  color: rgba(0,0,0,0.8);
+  text-align: center;
+  padding-top: 0;
+  font-size: 10pt;
+  width: 25%;
 }
 .glyphicon {
   padding: .8ex 0 0 0;
