--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -332,7 +332,7 @@ h2 {
   text-align: center;
   padding-top: 0;
   font-size: 10pt;
-  width: 25%;
+  width: 9em;
 }
 .glyphicon {
   padding: .8ex 0 0 0;
@@ -350,6 +350,15 @@ h2 {
 .container > div.navbar-header {
   width: 100%;
   margin: 0;
+}
+.form-control {
+  height: 6ex;
+}
+span > button.glyphicon-trash {
+  height: 4ex;
+}
+label > h3 {
+  padding-bottom: 1ex;
 }
 // Small devices (tablets, 768px and up)
 @media (min-width: 768px) {
@@ -374,6 +383,18 @@ h2 {
   .work-btn:hover, .history-btn:hover, .pr-btn:hover {
     color: firebrick;
   }
+  .new-moves {
+    width: 60%;
+  }
+  .form-control {
+    height: 8ex;
+  }
+  span > button.glyphicon-trash {
+    height: 5.5ex;
+  }
+  .add-move-btn, .save-btn {
+    width: 12em;
+  }
  }
 //Medium devices (desktops, 992px and up)
 @media (min-width: 992px) {
@@ -382,7 +403,15 @@ h2 {
     padding: 0;
     padding-top: 2ex;
     width: 60%;
-
+  }
+  .new-moves {
+    width: 40%;
+  }
+  .form-control {
+    height: 10ex;
+  }
+  span > button.glyphicon-trash {
+    height: 7ex;
   }
 }
 /*Large devices (large desktops, 1200px and up)
