--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -72,7 +72,6 @@ h1 {
   height: 100vh;
 }
 .kettleBox {
-  padding: 8%;
   width: 100%;
   margin: 0 auto;
   background-color: rgba(0,0,0,0.4);
@@ -105,12 +104,9 @@ h4 {
   margin-top: 5%;
 }
 .kettle {
-  width: 60%;
-  /* margin: 50% auto 0 auto; */
-  position: absolute;
-  top: 30%;
-  left: 20%;
-  right: 20%;
+  width: 12em;
+  margin: 0 auto;
+  padding-top: 25ex;
 }
 .loginText {
   position: absolute;
@@ -421,6 +417,11 @@ label > h3 {
   .move-listings p {
     font-size: 13pt;
   }
+  .kettle {
+    width: 18em;
+    margin: 0 auto;
+    padding-top: 15ex;
+  }
  }
 //Medium devices (desktops, 992px and up)
 @media (min-width: 992px) {
@@ -447,6 +448,11 @@ label > h3 {
   }
   .move-listings p {
     font-size: 15pt;
+  }
+  .kettle {
+    width: 25em;
+    margin: 0 auto;
+    padding-top: 22ex;
   }
 }
 /*Large devices (large desktops, 1200px and up)
