--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -173,7 +173,7 @@ footer {
   transform: rotateZ(90deg)
 }
 .main-body {
-  background: url(../assets/images/boxbg.png) no-repeat center center fixed;
+  background: url(http://uptcrossfit.com/wp-content/uploads/2013/06/UPT-gym-11.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   background-size: cover;
 }
