--- a/src/app/pr.scss
+++ b/src/app/pr.scss
@@ -25,3 +25,25 @@
     border-color: black;
     border-width: 3px;
 }
+
+
+//
+// Small devices (tablets, 768px and up)
+//
+@media (min-width: 768px) {
+
+}
+
+//
+//Medium devices (desktops, 992px and up)
+//
+@media (min-width: 992px) {
+
+}
+
+//
+//Large devices (large desktops, 1200px and up)
+//
+@media (min-width: @screen-lg-min) {
+
+ }
