--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -197,7 +197,7 @@ h2 {
   padding: 0 2%;
 }
 .row-1{
-  margin: 8ex 0 2ex 0;
+  margin: 10ex 0 2ex 0;
 }
 .row-2, .row-3 {
   color: white;
@@ -328,11 +328,11 @@ h2 {
 }
 .fb-avatar {
   margin: 0 auto;
-  width: 125px;
+  width: 12em;
 }
 .work-btn, .history-btn, .pr-btn {
   background-color: rgba(255,255,255,0.8);
-  height: 11.05ex;
+  height: 9ex;
   color: rgba(0,0,0,0.8);
   text-align: center;
   padding-top: 3ex;
@@ -376,6 +376,11 @@ span > button.glyphicon-trash {
 label > h3 {
   padding-bottom: 1ex;
 }
+.dash-buttons {
+  width: 100%;
+  position: absolute;
+  bottom: 0%;
+}
 // Small devices (tablets, 768px and up)
 @media (min-width: 768px) {
   .row-1 {
@@ -387,7 +392,7 @@ label > h3 {
     width: 60%;
   }
   .fb-avatar {
-    width: 180px;
+    width: 16em;
     margin: 0;
     float: left;
     padding: 0;
@@ -425,7 +430,11 @@ label > h3 {
     margin: 0 auto;
     padding-top: 15ex;
   }
+  .dash-buttons {
+    position: relative;
+  }
  }
+
 //Medium devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .fbName {
