--- a/src/app/views/new-workout.html
+++ b/src/app/views/new-workout.html
@@ -18,7 +18,7 @@
 
     </div>
     <div>
-      <input type="Button" class="add-move-btn" value="<span class='glyphicon glyphicon-plus'></span>Add Movement" ng-click="work.addMove()"><br>
+      <input class="add-move-btn" value="Add Movement" ng-click="work.addMove()"><br>
       <input type="submit" class="save-btn" value="Save Workout" ng-hide="work.disable()">
 
 
