--- a/src/app/pr.css
+++ b/src/app/pr.css
@@ -1,17 +1,28 @@
-//
-// PR page CSS
-//
+
 .pr-list {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: rgba(0, 0, 0, 0.8);
+  margin: 2ex auto 5ex;
+  padding: 2ex;
+  width: 90%;
   list-style: none;
-  font-size: 14pt;
-  line-height: 4ex;
+}
+
+.pr-head {
+  margin-top: 0;
+  text-align: center;
+}
+.prName {
+  font-size: 12pt;
+  border-bottom: 1pt solid grey;
 }
 
 #personalBests {
   color: white;
   background-color: rgba(0,0,0,0.5);
   padding: .5rem;
-  margin-top: 14%;
+  margin-top: 6ex;
+  padding-top: 8%;
   overflow: auto;
   height: 100vh;
   width: 100%;
@@ -27,25 +38,18 @@
 }
 
 
-//
-// Small devices (tablets, 768px and up)
-//
+
 @media (min-width: 768px) {
   .pr-list {
     color: solid red;
   }
 }
 
-//
-//Medium devices (desktops, 992px and up)
-//
+
 @media (min-width: 992px) {
 
 }
 
-//
-//Large devices (large desktops, 1200px and up)
-//
 @media (min-width: @screen-lg-min) {
 
  }
