--- a/src/app/views/new-workout.html
+++ b/src/app/views/new-workout.html
@@ -1,40 +1,9 @@
-<<<<<<< HEAD
-
-<!-- TODO: extract, inject nav with ng-include instead -->
-<div class="container-fluid main-body">
-  <nav class="navbar navbar-default main-nav" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-          <img class="ree" src="./assets/images/reebokxfit.png" alt="">
-        </a>
-        <a class="name" href="#">
-          <h1 class="appName navbar-left">Activ8</h1>
-        </a>
-        <button ng-click="logOut()" class="logout navbar-right btn">Logout</button>
-      </div>
-    </div>
-  </nav>
-<!-- /TODO -->
-<section class="main" ng-controller="WorkoutController as work">
-
-  <form class="new-move" ng-submit="work.addWork(work.workout)">
-    <label><h4>Today's Workout</h4></label><br>
-    <p style="color: white;">{{1417906862147 | date:'short'}}</p>
-    <div class="new-moves" ng-repeat="move in work.workout">
-      <input class='naming{{move.moveNumber}}' ng-model="move.name" type="text" list="moving" placeholder="Select Movement" ><br>
-      <input type="text" ng-model="move.reps" placeholder="Reps"><br>
-      <input type="text" ng-model="move.rds"  placeholder="Rounds"><br>
-      <input type="text" ng-model="move.weight" placeholder="Weight"><button class="btn btn-danger glyphicon glyphicon-trash" ng-click="work.delete(move)"></button><br>
-
-=======
-<section class="go-to-history col-xs-12">
-  <a href="#history" class="btn btn-warning btn-sm">My History</a>
-</section>
->>>>>>> upstream/development
+<!-- <section class="go-to-history col-xs-12">
+  <a href="#history" class="btn btn-warning btn-sm my-history-btn">My History</a>
+</section> -->
 <section class="main">
-  <form class="new-move col-xs-12" ng-submit="work.addWork(work.workout)" name="new">
-    <label><h4>Today's Workout</h4></label><br>
+  <form class="new-move" ng-submit="work.addWork(work.workout)" name="new">
+    <label><h3>Today's Workout</h3></label><br>
     <div class="new-moves" ng-repeat="move in work.workout" >
       <input class="form-control" ng-model="move.name" type="text" list="moving" placeholder="Select Movement" autocomplete="on" required>
       <input type="text" class="form-control" ng-model="move.reps" placeholder="Reps" required>
@@ -49,8 +18,8 @@
 
     </div>
     <div>
-      <input type="Button" class="btn btn-success" value="(+)Add Movement" ng-click="work.addMove()"><br>
-      <input type="submit" class="btn btn-primary" value="Save Workout" ng-disabled="work.disable()">
+      <input type="Button" class="add-move-btn" value="(+)Add Movement" ng-click="work.addMove()"><br>
+      <input type="submit" class="save-btn" value="Save Workout" ng-hide="work.disable()">
 
 
     </div>
