--- a/src/app/views/personal-records.html
+++ b/src/app/views/personal-records.html
@@ -1,23 +1,9 @@
 <div class="container-fluid main-body">
-  <nav class="navbar navbar-default main-nav" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-          <img class="ree" src="./assets/images/reebokxfit.png" alt="">
-        </a>
-        <a class="name" href="#">
-          <h1 class="appName navbar-left">Activ8</h1>
-        </a>
-        <button ng-click="app.logout()" class="logout navbar-right btn" href="#">Logout</button>
-      </div>
-    </div>
-  </nav>
-
   <section id="personalBests">
-    <h3 class="records">Personal Records</h3>
+    <h2 class="pr-head">Personal Records</h3>
     <ul class="pr-list">
         <li ng-repeat="(name, best) in app.user.pr">
-          {{name}}:
+          <span class="prName">{{name}}</span>
           <div contenteditable name="prs" ng-model="best.weight" strip-br="true">{{best.weight}}</br></div>
         </li>
     </ul>
