--- a/src/app/pr.css
+++ b/src/app/pr.css
@@ -39,7 +39,7 @@
 #personalBests::-webkit-scrollbar {
   display: none;
 }
-[contenteditable]:focus {
+#contenteditable:focus {
     border-style: dashed;
     border-color: black;
     border-width: 3px;
