--- a/src/app/views/pr.html
+++ b/src/app/views/pr.html
@@ -5,7 +5,7 @@
       <ul class="pr-list">
         <li ng-repeat="(name, best) in app.user.pr">
           <p class="prName">{{name}}</p>
-          <div contenteditable name="prs" ng-model="best.weight" strip-br="true" class="prWeight">{{best.weight}}</br></div>
+          <div id="contenteditable" contenteditable name="prs" ng-model="best.weight" strip-br="true" class="prWeight">{{best.weight}}</br></div>
         </li>
       </ul>
     </section>
